--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-cabecalho__menu-hamburguer {
+.cabecalho__menu-hamburguer {
   width: 24px;
   height: 24px;
   background-image: url("../imagens/Menu.svg");
@@ -80,4 +80,16 @@ cabecalho__menu-hamburguer {
     text-decoration: none;
     text-transform: uppercase;
   }
+}
+
+@media screen and (min-width: 1024px) {  
+
+  .container__menu-titulo{
+    display: block;
+  }
+
+  .container__menu-titulo:last-child{
+    padding-right: 1em;
+  }
+
 }
